--- a/ats-hr-afrontend-develop/ats-hr-backend-develop/requirements.txt
+++ b/ats-hr-afrontend-develop/ats-hr-backend-develop/requirements.txt
@@ -15,7 +15,7 @@ pytesseract==0.3.13
 Pillow==10.4.0
 pdf2image==1.17.0
 python-magic==0.4.27
-textract==1.6.5
+#textract==1.6.5
 APScheduler==3.10.4
 loguru==0.7.2
 
