Update VITE_API_BASE_URL in production environment

--- a/ats-hr-afrontend-develop/ats-hr-afrontend/.env.production
+++ b/ats-hr-afrontend-develop/ats-hr-afrontend/.env.production
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL=https://ats-10-iyol.onrender.com
+VITE_API_BASE_URL=https://hammerhead-app-2ndu8.ondigitalocean.app/ats-ats-hr-afrontend-develop-at2/
